--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="email">Email</string>
     <string name="name">Navn</string>
     <string name="address">Addresse</string>
+    <string name="add_subject">Tilføj borger</string>
+    <string name="general_information">Generelle Oplysninger</string>
+    <string name="health_condition">Helbredstilstand</string>
 </resources>
