fixed add subject and updated general information items!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="city">By</string>
     <string name="street">Gade</string>
     <string name="post_code">Postnummer</string>
+    <string name="refresh">Opdater Listen</string>
 </resources>
