--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,6 @@
     <string name="sub_title">SubTitle</string>
     <string name="reason">Årsag</string>
     <string name="not_relevant">Ikke relevant</string>
-    <string name="potentially_relevant">Potentielt Relevant</string>
+    <string name="potentially_relevant">Potentielt relevant</string>
     <string name="relevant">Relevant</string>
 </resources>
