--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="not_relevant">Ikke relevant</string>
     <string name="potentially_relevant">Potentielt relevant</string>
     <string name="relevant">Relevant</string>
+    <string name="category">Kategori</string>
 </resources>
