--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="potentially_relevant">Potentielt relevant</string>
     <string name="relevant">Relevant</string>
     <string name="category">Kategori</string>
+    <string name="function_ability">Funktionsevnetilstand</string>
 </resources>
